[tool.poetry]
name = "sanitizer"
version = "1.0.0"
description = "Tool that will help you to find duplication and save the result in a new folder"
authors = ["Khasbilegt.TS <khasbilegt.ts@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
sanitizer = "sanitizer:main"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
bpython = "^0.19"
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 80
target_version = ['py38']
include = '\.py$'
exclude = '''
/(
    \.git
  | \.venv
  | _build
  | build
  | dist
)/
'''